css/styles.css
/* ... */
.resume__container p {
    margin-top: var(--spacing-1);
    line-height: 1.75;
}

.resume__work-experience {
    margin-top: var(--spacing-9);
}

.resume__work-experience a {
    text-decoration: underline;
}

.work__description {
    font-size: var(--font-sm);
}

.work__description:not(:first-of-type) {
    margin-top: var(--spacing-3);
}

.resume__year {
    margin-top: var(--spacing-2);
    color: var(--text-light);
    font-size: var(--font-sm);
}

.resume__skills-list > li {
    margin-top: var(--spacing-6);
}

.resume__skills-list p {
    font-size: var(--font-sm);
}

.resume__skills-list p:first-child {
    font-weight: bold;
    font-size: var(--font-base);
}

.resume__download {
    margin-top: var(--spacing-12);
    text-align: center;
}

.btn-small {
    display: inline-block;
    margin-top: var(--spacing-3);
    margin-right: auto;
    margin-left: auto;
    background-color: var(--color-primary);
    padding: var(--spacing-2) var(--spacing-9);
    border-radius: var(--border-rounded-lg);
    color: var(--color-surface);
    font-size: var(--font-sm);
}

.btn-small > .btn-innards {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: var(--spacing-2);
}

.btn-innards > svg {
    height: 16px;
    width: 16px;
    color: inherit;
}

.card__inline-link::after,
.inline-link::after {
    content: "";
    width: 9px;
    height: 9px;
    margin-left: 1px;
    vertical-align: super;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z'/%3E%3Cpath fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z'/%3E%3C/svg%3E");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    display: inline-block;
}

[data-dark="true"]
.card__inline-link::after,
.inline-link::after {
    filter: invert(1);
}

/***************************
 ***** Contact section *****
 ***************************/

.contact__header {
    margin-top: var(--spacing-36);
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.contact__header > p {
    margin-top: var(--spacing-2);
    color: var(--text-light);
}

.contact__email > a {
    text-decoration: underline;
    font-weight: bold;
}

.contact__form {
    max-width: 450px;
    margin: 0 auto;
    margin-top: var(--spacing-9);
    display: flex;
    flex-direction: column;
    gap: var(--spacing-6);
}

.contact__form input {
    display: block;
    width: 100%;
    margin-top: var(--spacing-1);
    padding: var(--spacing-2);
    background-color: var(--color-surface-secondary);
    border: 1px solid #ddd;
    border-radius: var(--border-rounded-sm);
}

.contact__form input:focus {
    outline: 2px solid var(--color-primary);
}

.contact__form textarea {
    display: block;
    width: 100%;
    margin-top: var(--spacing-1);
    padding: var(--spacing-2);
    background-color: var(--color-surface-secondary);
    border: 1px solid #ddd;
    border-radius: var(--border-rounded-sm);
}

.contact__form textarea:focus {
    outline: 2px solid var(--color-primary);
}

.svg-small {
    height: 14px; 
    width: 14px;
}

/******************
 ***** Footer *****
 ******************/

footer {
    margin-top: var(--spacing-24);
    display: flex;
    flex-wrap: wrap;
    gap: var(--spacing-4);
    justify-content: space-around;
    padding: var(--spacing-4);
    background-color: var(--color-surface-secondary);
    font-size: var(--font-sm);
}

footer > a {
    text-decoration: underline;
}

footer > .icon-list {
    display: flex;
    gap: var(--spacing-2);
}


.footer__icon {
    width: 25px;
    height: 25px;
    color: var(--color-primary);
    fill: var(--color-primary);
}

.footer__icon > a {
    display: inline-block;
}
 
 /*****************
 ***** Misc. *****
 *****************/

.hidden {
    display: none !important;
}

@media (max-width: 640px) {
    .mobile-hidden {
        display: none;
    }
}

